# lamar-benchmark

./: .gitignore  CAPTURE.md  Dockerfile  RAW-DATA.md  README.md  install_core_dependencies.sh  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: docker-image.yml
apps/ScanCapture_iOS/: .gitignore  README.md
docker/: Dockerfile  build.sh
docker/scripts/: build_pcdmeshing.sh  build_raybender.sh
lamar/: __init__.py  combine_results.py  eval.py  run.py
lamar/tasks/: chunk_alignment.py  feature_extraction.py  feature_extraction_and_matching.py  feature_matching.py  mapping.py  pair_selection.py  pose_estimation.py
lamar/utils/: capture.py  localization.py  misc.py  retrieval.py
lamar_benchmark/: __init__.py  run.py
lamar_benchmark/tasks/: __init__.py  chunk_alignment.py  dense_matching.py  feature_extraction.py  feature_matching.py  pair_selection.py  pose_estimation.py
lamar_benchmark/utils/: capture.py  localization.py  retrieval.py
notebooks/: check_anonymization.ipynb
pipelines/: pipeline_navvis_rig.py  pipeline_scans.py  pipeline_sequence.py
pipelines/sequences/: CAB_hololens.txt  CAB_phone.txt  HGE_hololens.txt  HGE_phone.txt  LIN_hololens.txt  LIN_phone.txt
requirements/: lamar.txt  scantools.txt
scantools/: __init__.py  run_capture_to_empty_colmap.py  run_combine_navvis_sessions.py  run_combine_sequences.py  run_compare_sequence_alignments.py  run_image_anonymization.py  run_joint_refinement.py  run_manual_anonymization.py  run_map_query_split.py  run_meshing.py  run_navvis_to_capture.py  run_phone_to_capture.py  run_pose_graph_optimizer.py  run_qrcode_detection.py  run_query_selection.py  run_radio_anonymization.py  run_radio_transfer.py  run_reference_triangulation.py  run_rendering.py  run_scan_aligner.py  run_sequence_aligner.py  run_sequence_rerendering.py  run_sequence_selection.py  run_session_to_kapture.py  to_meshlab_visualization.py
scantools/capture/: __init__.py  capture.py  misc.py  namedposes.py  pose.py  proc.py  rigs.py  (+4 more)
scripts/: build_hloc.sh  build_pcdmeshing.sh  build_raybender.sh  install_ceres_solver.sh  install_colmap.sh  install_core_dependencies.sh  install_hloc.sh  load_env.sh
(+76 files in other folders)
